# EPOCH

./: .gitignore  skills-lock.json
.agents/skills/magicblock/: SKILL.md  debugging.md  resources.md  typescript-setup.md
.agents/skills/magicblock/agents/: openai.yaml
epoch/: .env.example  Anchor.toml  Cargo.toml
epoch/app/: index.html  vite.config.ts
epoch/app/src/: App.tsx  index.css  main.tsx
epoch/app/src/components/home/: HeroSection.tsx  HowItWorksSection.tsx  LiveMarketsGrid.tsx  MarqueeFooter.tsx  StatsBar.tsx
epoch/app/src/components/layout/: LoadingScreen.tsx  Navbar.tsx
epoch/app/src/components/market/: CreateMarketModal.tsx  LiveFeed.tsx  MarketCard.tsx  PositionPanel.tsx  ProbabilityCurve.tsx  SettlementCountdown.tsx
epoch/app/src/components/ui/: AccentButton.tsx  GlassCard.tsx  LiveDot.tsx  OutcomeChip.tsx
epoch/app/src/context/: MarketsContext.tsx
epoch/app/src/hooks/: useERConnection.ts  useMarket.ts  useMarkets.ts  useOraclePrice.ts  usePosition.ts
epoch/app/src/lib/: connections.ts  oracle.ts  program.ts
epoch/app/src/pages/: HomePage.tsx  MarketPage.tsx
epoch/crank/src/: index.ts
epoch/programs/epoch/: Cargo.toml
epoch/programs/epoch/src/: errors.rs  lib.rs
epoch/programs/epoch/src/instructions/: adjust_position.rs  commit_and_settle.rs  delegate_market.rs  delegate_position.rs  events.rs  initialize_market.rs  initialize_position.rs  mod.rs  settlement_action.rs  take_position.rs  withdraw_winnings.rs
epoch/programs/epoch/src/state/: market.rs  mod.rs  position.rs  vault.rs
epoch/tests/: epoch.ts
