[package]
name = "epoch"
version = "0.1.0"
description = "EPOCH - Real-time prediction markets on MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "epoch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.15", features = ["anchor"] }
